# linorobot

linorobot2/linorobot2_description/urdf/sensors/: laser.urdf.xacro
linorobot2/linorobot2_navigation/maps/: my_first_map.pgm  my_first_map.yaml
micro_ros_setup/.github/workflows/: ci.yml
uros/micro-ROS-Agent/.github/workflows/: ci.yml
yolo_ros/: .gitignore  Dockerfile  README.md  pyproject.toml
yolo_ros/.github/: Doxyfile
yolo_ros/.github/workflows/: humble-docker-push.yml  iron-docker-push.yml  jazzy-docker-push.yml  kilted-docker-push.yml  rolling-docker-push.yml
yolo_ros/yolo_bringup/: CMakeLists.txt  package.xml
yolo_ros/yolo_bringup/launch/: yolo-world.launch.py  yolo.launch.py  yoloe.launch.py  yolov10.launch.py  yolov11.launch.py  yolov12.launch.py  yolov26.launch.py  yolov5.launch.py  yolov8.launch.py  yolov9.launch.py
yolo_ros/yolo_msgs/: package.xml
yolo_ros/yolo_ros/: package.xml  setup.py
yolo_ros/yolo_ros/yolo_ros/: debug_node.py  detect_3d_node.py  tracking_node.py  yolo_node.py
